[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
paste = "1.0"
aoc-macro = { path = "aoc-macro" }
nom = "7.1"
project-root = "0.2"
num = "0.4"
