[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
paste = "1.0"
aoc-macro = { path = "aoc-macro" }
nom = "7.1"
project-root = "0.2"
num = "0.4"
pathfinding = "4.9"
itertools = "0.12"
nalgebra = "0.32"
graph_builder = "0.4"
rand = { version = "0.8.5", features = ["small_rng"]}
petgraph = "0.6.4"
